横幅を1200pxに修正

--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
 		
 		<div class="mainImageBox">
 			<ul class="bxslider">
-				<li><img src="images/climbing.png" class="mainImages"></li>
-				<li><img src="images/mainImage1.png" class="mainImages"></li>
-				<li><img src="images/mainImage2.png" class="mainImages"></li>
+				<li><img src="images/top1.jpg" class="mainImages"></li>
+				<li><img src="images/top2.png" class="mainImages"></li>
+				<li><img src="images/top3.png" class="mainImages"></li>
 			</ul>
 		</div>
 		
 		<div class="">
-			<a href=""><img src="images/contentsImageCompany.png" class="contents1"></a>
-			<a href=""><img src="images/contentsImageWorking.png" class="contents1"></a>
+			<a href=""><img src="images/contentsImageCompany.jpg" class="contents1"></a>
+			<a href=""><img src="images/contentsImageWork.jpg" class="contents1"></a>
 		</div>
 		<div class="contentsBox2">
-			<a href=""><img src="images/contentsImageVision.png" class="contents2L"></a>
-			<a href=""><img src="images/contentsImageProduce.png" class="contents2R"></a>
-			<a href=""><img src="images/contentsImageWelfare.png" class="contents2L"></a>
+			<a href=""><img src="images/contentsImageVision.jpg" class="contents2L"></a>
+			<a href=""><img src="images/contentsImageProduce.jpg" class="contents2R"></a>
+			<a href=""><img src="images/contentsImageWelfare.jpg" class="contents2L"></a>
 			<a href="recruit.html">
-				<img src="images/contentsImageRecruit.png" class="contents2R">
+				<img src="images/contentsImageRecruit.jpg" class="contents2R">
 			</a>
 		</div>
 
