googleマップ　フレキシブル対応

--- a/outline.html
+++ b/outline.html
@@ -83,24 +83,24 @@
 		認定パートナー
 	</div>
 	<div class="partner_wrapper">
-	<div class="partner">
-		マイクロソフト 認定パートナー(Silver Datacenter)
-		<br>
-		<img src="img/MPN_logo.png" hspace="20">
-	</div>
-	<div class="partner">
-		オラクル(OPN Silver Partner) 
-		<br>
-		<img src="img/opn_mp.gif" hspace="20">
-	</div>
-	<div class="partner">
-		シマンテック（Symantec Silver Partner)
-		<br>
-		<img src="img/icon_sales.gif" hspace="20">
+		<div class="partner">
+			マイクロソフト 認定パートナー(Silver Datacenter)
+			<br>
+			<img src="img/MPN_logo.png" hspace="20">
+		</div>
+		<div class="partner">
+			オラクル(OPN Silver Partner) 
+			<br>
+			<img src="img/opn_mp.gif" hspace="20">
+		</div>
+		<div class="partner">
+			シマンテック（Symantec Silver Partner)
+			<br>
+			<img src="img/icon_sales.gif" hspace="20">
+		</div>
 	</div>
 	<div class="p1">
 		大阪本社
-	</div>
 	</div>
 	<div class="google-box">
 		<p>
@@ -111,7 +111,7 @@
 		</p>
 	</div>
 	<div class="google-box2">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5679.162899329557!2d135.4936039889313!3d34.68706335155884!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e6fab81e199d%3A0x5f4f4f9f1b1f4759!2z44CSNTUwLTAwMDIg5aSn6Ziq5bqc5aSn6Ziq5biC6KW_5Yy65rGf5oi45aCA77yR5LiB55uu77yR77yQ4oiS77yS!5e0!3m2!1sja!2sjp!4v1522312932591" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5679.162899329557!2d135.4936039889313!3d34.68706335155884!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e6fab81e199d%3A0x5f4f4f9f1b1f4759!2z44CSNTUwLTAwMDIg5aSn6Ziq5bqc5aSn6Ziq5biC6KW_5Yy65rGf5oi45aCA77yR5LiB55uu77yR77yQ4oiS77yS!5e0!3m2!1sja!2sjp!4v1522312932591" frameborder="0" style="border: 0;  width: 100%; height: 100%;" allowfullscreen></iframe>
 	</div>
 	<div class="clear">
 	</div>
@@ -127,7 +127,7 @@
 		</p>
 	</div>
 	<div class="google-box2">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6480.617671528825!2d139.776435!3d35.69401700000001!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188eabc2ba8ac1%3A0x8cbe6ddcf855af59!2z5pel5pys44CB44CSMTAxLTAwMzIg5p2x5Lqs6YO95Y2D5Luj55Sw5Yy65bKp5pys55S677yS5LiB55uu77yR77yS4oiS77yS!5e0!3m2!1sja!2sus!4v1522317496916" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6480.617671528825!2d139.776435!3d35.69401700000001!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188eabc2ba8ac1%3A0x8cbe6ddcf855af59!2z5pel5pys44CB44CSMTAxLTAwMzIg5p2x5Lqs6YO95Y2D5Luj55Sw5Yy65bKp5pys55S677yS5LiB55uu77yR77yS4oiS77yS!5e0!3m2!1sja!2sus!4v1522317496916" frameborder="0" style="border: 0; width: 100%; height: 100%;" allowfullscreen></iframe>
 	</div>
 	<div class="clear">
 	</div>
