社員紹介ページのポップアップの作成

--- a/produce.html
+++ b/produce.html
@@ -49,7 +49,7 @@
 
 		<header>
 			<nav id="menu-box">
-			<div id="toggle"><a href="#" class="toggleMenu"><img src="images/rogo.png" class="toggleRogo">RECRUIT MENU</a></div>
+			<div id="toggle"><img src="images/rogo.png" class="toggleRogo"><a href="#" class="toggleMenu">RECRUIT MENU</a></div>
 				<ul class="menu">
 					<li class="menuRogo"><a href="index.html"><img src="images/rogo.png" class="rogo"></a></li>
 					<li class="menuHome"><a href="index.html">ホーム</a></li>
@@ -64,23 +64,54 @@
 		<div class="clear"></div>
 		</header>
 		
-		社風<br>
-		”愉快な仲間たち”<br>
-		よくある言葉ですが、やっぱりそれが一番しっくり来る感じです。<br>
-		bitにはいろんな人がいます。<br>
-		よく話す人。よく笑う人。<br>
-		もちろん、仕事をしている最中は集中していますので、無言でパソコンの画面を見つめ、聞こえてくるのはキーボードをたたく音だけ。<br>
-		そんな場面がほとんどですが、誰だって息抜きが必要なわけで、その使い分けが上手です。<br>
-		誰かの一言がきっかけで、さらにかぶせてボケる人やノリ突っ込みをする人でしばらくは笑い話で脳の緊張を緩めたあと、またみんな仕事に集中する。<br>
-		こんなことを繰り返しながら日々の仕事をこなしています。<br>
-		大阪発の会社だから、といわれればまさにそのとおりなのですが<br>
-		考える仕事なのでどうしても行き詰ってしまうことがあります。<br>
-		そんなときにさりげなく、冗談の中で手助けをし合う。<br>
-		そんな人たちが、それぞれの夢や希望、憧れや目標をみんなで実現していく会社です。<br>
+		<h1 class="pageTitle">社員紹介</h1>
+		<div class="">
+			<h2>社風</h2>
+			<p class="">「愉快な仲間たち」</p>
+			<p class="">
+				よくある言葉ですが、やっぱりそれが一番しっくり来る感じです。<br>
+				bitにはいろんな人がいます。<br>
+				よく話す人。よく笑う人。<br>
+				もちろん、仕事をしている最中は集中していますので、無言でパソコンの画面を見つめ、聞こえてくるのはキーボードをたたく音だけ。<br>
+				そんな場面がほとんどですが、誰だって息抜きが必要なわけで、その使い分けが上手です。<br>
+				誰かの一言がきっかけで、さらにかぶせてボケる人やノリ突っ込みをする人でしばらくは笑い話で脳の緊張を緩めたあと、またみんな仕事に集中する。<br>
+				こんなことを繰り返しながら日々の仕事をこなしています。<br>
+				大阪発の会社だから、といわれればまさにそのとおりなのですが<br>
+				考える仕事なのでどうしても行き詰ってしまうことがあります。<br>
+				そんなときにさりげなく、冗談の中で手助けをし合う。<br>
+				そんな人たちが、それぞれの夢や希望、憧れや目標をみんなで実現していく会社です。<br>
+			</p>
+		</div>
 		
-		スタッフ<br>
-		BITの社員の数名をご紹介します。<br>
-		
+		<div class="">
+			<h2>スタッフ</h2>
+			<p class="">BITの社員の数名をご紹介します。</p>
+			<!-- 社員紹介枠 -->
+				<div class="popupModal1">
+					<input type="radio" name="modalPop" id="pop" />
+					<label for="pop">クリックでポップアップ</label>
+					<input type="radio" name="modalPop" id="pop2" />
+					<label for="pop2">CLOSE</label>
+					<input type="radio" name="modalPop" id="pop3" />
+					<label for="pop3">×</label>
+					<div class="modalPopup2">
+						<div class="modalPopup3">
+							<h3 class="modalTitle">社員名</h3>
+							<div class="modalMain">
+								<p>世界中どこを探してもなかったので作りました。</p>
+								<p>jsを使っていないのでコンフリクトすることはありません。</p>
+								<p>スマホにも対応。iPhone4くらいの小さい画面でも大丈夫です。</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			<div class=""></div>
+			<div class=""></div>
+			<div class=""></div>
+			<div class=""></div>
+			<div class=""></div>
+			<div class=""></div>
+		</div>
 		<footer>
 			<hr>
 			<div class="LinkImageBox">
