--- a/recruit.html
+++ b/recruit.html
@@ -65,7 +65,7 @@
 		</header>
 		
 <div class="">
-	<h1 class="recruitTitle">募集要項</h1>
+	<h1 class="pageTitle">募集要項</h1>
 	<div class="buttonBox">
 		<a href="#smoothplay" class="square_btn">新卒採用</a>
 		<a href="#smoothplay2" class="square_btn">中途採用</a>
