社員紹介　デザイン抜きのおおよその感じ

--- a/produce.html
+++ b/produce.html
@@ -83,35 +83,193 @@
 			</p>
 		</div>
 		
-		<div class="">
 			<h2>スタッフ</h2>
 			<p class="">BITの社員の数名をご紹介します。</p>
-			<!-- 社員紹介枠 -->
-				<div class="popupModal1">
-					<input type="radio" name="modalPop" id="pop" />
-					<label for="pop">クリックでポップアップ</label>
-					<input type="radio" name="modalPop" id="pop2" />
-					<label for="pop2">CLOSE</label>
-					<input type="radio" name="modalPop" id="pop3" />
-					<label for="pop3">×</label>
-					<div class="modalPopup2">
-						<div class="modalPopup3">
-							<h3 class="modalTitle">社員名</h3>
-							<div class="modalMain">
-								<p>世界中どこを探してもなかったので作りました。</p>
-								<p>jsを使っていないのでコンフリクトすることはありません。</p>
-								<p>スマホにも対応。iPhone4くらいの小さい画面でも大丈夫です。</p>
+			<div class="staffCenter">
+				<!-- 社員紹介枠 -->
+				<div class="center">
+					<!-- <img src="" class="testFrame"> -->
+					<div class="testFrame"></div>
+					<div class="popupModal1">
+						<input type="radio" name="modalPop" id="pop" />
+						<label for="pop">BIT 太郎</label>
+						<input type="radio" name="modalPop" id="pop2" />
+						<label for="pop2">CLOSE</label>
+						<input type="radio" name="modalPop" id="pop3" />
+						<label for="pop3">×</label>
+						<div class="modalPopup2">
+							<div class="modalPopup3">
+								<h3 class="modalTitle">社員名とか部署名とか</h3>
+								<div class="modalMain">
+								<div class="testFrame"></div>
+									・学生時代に学んだこと<br>
+									大学時代は完全に文系である「ヒト・モノ・カネ」の流れについて学び、<br>
+									情報処理系の授業を選択したことがきっかけで、独学で資格取得やHP作成などを<br>
+									行なっていました。<br>
+									学業以外では、1日に２～３００万前後を売り上げる焼き肉店の厨房で３年間働<br>
+									き続けたことにより<br>
+									余裕を持った事前準備、スピーディーな状況判断、チームワークの大切さなどを<br>
+									学びました。<br><br>
+									
+									・BITを選んだ理由<br>
+									入社当時は創業２０周年を迎えていましたが、その古さを感じさせない「若手、<br>
+									中堅社員が活躍できる」<br>
+									社風を感じ取れたからです。<br><br>
+
+									・これから働くにあたって、身につけたいこと又は、身につけておけばよかったこと<br>
+									何にでも興味を持つことが大事かと思います。興味があれば行動しますし、身にもつきます。<br>
+									大事なことは様々なことを経験していることだと思います。<br><br>
+
+									・やりがいを感じる瞬間<br>
+									やはり楽しさは「ものづくり」にあると思います。<br>
+									自分で設計、プログラミングしたものが画面上で正しく表示されたり動作したりすると<br>
+									「よし！」と思いますし、お客さまに喜んでいただくことも当然嬉しいです。<br>
+									理系の人が強いイメージでしたが、上記の通り文系出身の自分の特色が生きる場面も多いので、<br>
+									そこにやりがいを感じて今後も楽しく仕事したいと思っています。<br><br>
+
+									・今後の目標<br>
+									「自分のやりたいことをカタチにし、提案して、会社としての売り上げにつなげる」<br>
+									というサイクルを確立させることです。<br>
+									また、社員がやりたい仕事に就け、お客さまの満足度も上がるようなフォローを行うことです。<br><br>
+
+									・簡単な今の仕事内容と、一日の流れ<br>
+									作業内容としては、プログラミングから要件定義支援までを行っており、<br>
+									その時々に必要な作業を能動的に行っています。<br>
+									一日の流れは、<br>
+									「６時半に起床→娘を小学校へ送り出す→電車で常駐先へ→業務開始→<br>
+									業務終了→社長と食事(※毎日ではない)→帰宅→娘と息子を風呂からあげる→<br>
+									娘に本を読んで寝かしつける→自分の時間（読書、TV鑑賞など）」<br>
+									といった感じでしょうか。<br><br>
+
+									・メッセージ（なにか一言）<br>
+									業界、業種、会社選びは難しく、よく分からないかもしれません。<br>
+									BITという会社は、入社後の新人教育もしっかり行っており（とは言え自主的な学習は必須ですが）<br>
+									ほぼ毎年新入社員を雇用してしていますので、相談したり何気ない会話のできる先輩が見つかるはずです。<br>
+									まずは気軽に面接を受けて、会社の場所、雰囲気、人などを見て感じて判断してもらえればと思います。<br>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			<div class=""></div>
-			<div class=""></div>
-			<div class=""></div>
-			<div class=""></div>
-			<div class=""></div>
-			<div class=""></div>
+				<!-- 社員紹介枠 -->
+				<div class="center">
+					<!-- <img src="" class="testFrame"> -->
+					<div class="testFrame"></div>
+					<div class="popupModal1">
+						<input type="radio" name="modalPop" id="pop" />
+						<label for="pop">BIT 太郎</label>
+						<input type="radio" name="modalPop" id="pop2" />
+						<label for="pop2">CLOSE</label>
+						<input type="radio" name="modalPop" id="pop3" />
+						<label for="pop3">×</label>
+						<div class="modalPopup2">
+							<div class="modalPopup3">
+								<h3 class="modalTitle">社員名</h3>
+								<div class="modalMain">
+									<p>世界中どこを探してもなかったので作りました。</p>
+									<p>jsを使っていないのでコンフリクトすることはありません。</p>
+									<p>スマホにも対応。iPhone4くらいの小さい画面でも大丈夫です。</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- 社員紹介枠 -->
+				<div class="center">
+					<!-- <img src="" class="testFrame"> -->
+					<div class="testFrame"></div>
+					<div class="popupModal1">
+						<input type="radio" name="modalPop" id="pop" />
+						<label for="pop">BIT 太郎</label>
+						<input type="radio" name="modalPop" id="pop2" />
+						<label for="pop2">CLOSE</label>
+						<input type="radio" name="modalPop" id="pop3" />
+						<label for="pop3">×</label>
+						<div class="modalPopup2">
+							<div class="modalPopup3">
+								<h3 class="modalTitle">社員名</h3>
+								<div class="modalMain">
+									<p>世界中どこを探してもなかったので作りました。</p>
+									<p>jsを使っていないのでコンフリクトすることはありません。</p>
+									<p>スマホにも対応。iPhone4くらいの小さい画面でも大丈夫です。</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="clear"></div>
+				<!-- 社員紹介枠 -->
+				<div class="center">
+					<!-- <img src="" class="testFrame"> -->
+					<div class="testFrame"></div>
+					<div class="popupModal1">
+						<input type="radio" name="modalPop" id="pop" />
+						<label for="pop">BIT 太郎</label>
+						<input type="radio" name="modalPop" id="pop2" />
+						<label for="pop2">CLOSE</label>
+						<input type="radio" name="modalPop" id="pop3" />
+						<label for="pop3">×</label>
+						<div class="modalPopup2">
+							<div class="modalPopup3">
+								<h3 class="modalTitle">社員名</h3>
+								<div class="modalMain">
+									<p>世界中どこを探してもなかったので作りました。</p>
+									<p>jsを使っていないのでコンフリクトすることはありません。</p>
+									<p>スマホにも対応。iPhone4くらいの小さい画面でも大丈夫です。</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- 社員紹介枠 -->
+				<div class="center">
+					<!-- <img src="" class="testFrame"> -->
+					<div class="testFrame"></div>
+					<div class="popupModal1">
+						<input type="radio" name="modalPop" id="pop" />
+						<label for="pop">BIT 太郎</label>
+						<input type="radio" name="modalPop" id="pop2" />
+						<label for="pop2">CLOSE</label>
+						<input type="radio" name="modalPop" id="pop3" />
+						<label for="pop3">×</label>
+						<div class="modalPopup2">
+							<div class="modalPopup3">
+								<h3 class="modalTitle">社員名</h3>
+								<div class="modalMain">
+									<p>世界中どこを探してもなかったので作りました。</p>
+									<p>jsを使っていないのでコンフリクトすることはありません。</p>
+									<p>スマホにも対応。iPhone4くらいの小さい画面でも大丈夫です。</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- 社員紹介枠 -->
+				<div class="center">
+					<!-- <img src="" class="testFrame"> -->
+					<div class="testFrame"></div>
+					<div class="popupModal1">
+						<input type="radio" name="modalPop" id="pop" />
+						<label for="pop">BIT 太郎</label>
+						<input type="radio" name="modalPop" id="pop2" />
+						<label for="pop2">CLOSE</label>
+						<input type="radio" name="modalPop" id="pop3" />
+						<label for="pop3">×</label>
+						<div class="modalPopup2">
+							<div class="modalPopup3">
+								<h3 class="modalTitle">社員名</h3>
+								<div class="modalMain">
+									<p>世界中どこを探してもなかったので作りました。</p>
+									<p>jsを使っていないのでコンフリクトすることはありません。</p>
+									<p>スマホにも対応。iPhone4くらいの小さい画面でも大丈夫です。</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 		</div>
+		
+		<div class="clear"></div>
 		<footer>
 			<hr>
 			<div class="LinkImageBox">
