経営理念　幅・フレキシブル　編集

--- a/philosophy.html
+++ b/philosophy.html
@@ -24,14 +24,15 @@
 		<div class="top-words">
 			<h2>社長あいさつ</h2><br>
 		</div>
-		<div class="president">
-			<img src="img/51867_003.jpg"/* width="400" height="400"*/ >
-			<div class="presidentTx">
-				代表取締役<br>
-				野間　一志
-			</div>
-		</div>
+
 		<div class="hello">
+			<div class="president">
+				<img src="img/51867_003.jpg" style="width: 100%; height: 100%;">
+				<div class="presidentTx">
+					代表取締役<br>
+					野間　一志
+				</div>
+			</div>
 			弊社ホームページをごらん頂きまして誠に有難う御座います。
 			弊社は１９８３年９月に設立をさせて頂き、現在に至ります。<br>
 			これもお取引先の皆様の温かいご支援と弊社の従業員がお役に立てる会社
@@ -41,9 +42,9 @@
 			弊社はAIには早くから取り組んでおり、これからも儀重油の向上を目指して
 			今後も躍進いたします。<br>
 			技術者の皆さんと共に社会貢献を果たし、知識産業人としての誇りを持って
-			参りたいと思います。<br>
+			参りたいと思います。<br><br>
 
-			株式会社ビーアイテイが目指すことは、
+			株式会社ビーアイテイが目指すことは、<br><br>
 			<div class="list">
 				１、全社員が一日を楽しく一年を愉快に過ごせる会社<br>
 				２、仕事を通じて、社会に貢献し存在感のある会社<br>
