理念レイアウト変更

--- a/philosophy.html
+++ b/philosophy.html
@@ -44,7 +44,7 @@
 			技術者の皆さんと共に社会貢献を果たし、知識産業人としての誇りを持って
 			参りたいと思います。<br><br>
 
-			株式会社ビーアイテイが目指すことは、<br><br>
+			<p id="p1">株式会社ビーアイテイが目指すことは、</p>
 			<div class="list">
 				１、全社員が一日を楽しく一年を愉快に過ごせる会社<br>
 				２、仕事を通じて、社会に貢献し存在感のある会社<br>
