--- a/philosophy.html
+++ b/philosophy.html
@@ -27,7 +27,7 @@
 
 		<div class="hello">
 			<div class="president">
-				<img src="img/51867_003.jpg" style="width: 100%; height: 100%;">
+				<img src="images/boss.jpg" style="width: 100%; height: 100%;">
 				<div class="presidentTx">
 					代表取締役<br>
 					野間　一志
