--- a/philosophy.html
+++ b/philosophy.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<h1 align="center">経営理念</h1>
+	<h2>スローガン</h2><br>
 	<div class="text_1"><q>知識産業人として社会に貢献し、優れた創造力を持って今日を築き明日に挑む。</q></div>
 	<p>
 	この言葉を合言葉に"良い会社"になるために日々努力しています。<br>
