--- a/philosophy.html
+++ b/philosophy.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 	<h1 align="center">経営理念</h1>
+	<br>
+	<div id="container">
 	<h2>スローガン</h2><br>
 	<div class="text_1"><q>知識産業人として社会に貢献し、優れた創造力を持って今日を築き明日に挑む。</q></div>
 	<p>
@@ -17,45 +19,48 @@
 	社員一人一人が誇りを持てる会社を目指しています。<br>
 	楽しく愉快にとは、仕事にやりがいを感じ、誇りを持つということです。<br>
 	自分の仕事が誰かの役に立っていると実感できることが大切です。</p>
-
+	</div>
 <br>
 <br>
-
-	<div class="container">
+	<div class="container1">
 		<div class="top-words">
 			<h2>社長あいさつ</h2><br>
 		</div>
-
-		<div class="hello">
-			<div class="president">
-				<img src="images/boss.jpg" style="width: 100%; height: 100%;">
-				<div class="presidentTx">
-					代表取締役<br>
-					野間　一志
+		
+		<div id="upper_conteiner">
+			<div class="hello">
+				
+				弊社ホームページをごらん頂きまして誠に有難う御座います。
+				弊社は１９８３年９月に設立をさせて頂き、現在に至ります。<br>
+				これもお取引先の皆様の温かいご支援と弊社の従業員がお役に立てる会社
+				を目指したお陰だと感謝しております。<br>
+				いまさらながら、IT業界の進歩には驚かされます。
+				現在は、第四時産業革命といわれIOT、AIの技術が必須となっております。<br>
+				弊社はAIには早くから取り組んでおり、これからも儀重油の向上を目指して
+				今後も躍進いたします。<br>
+				技術者の皆さんと共に社会貢献を果たし、知識産業人としての誇りを持って
+				参りたいと思います。<br><br>
+				<div class="president">
+					<img src="images/boss.jpg" style="width: 100%; height: 100%;">
+					<div class="presidentTx">
+						代表取締役<br>
+						野間　一志
+					</div>
 				</div>
 			</div>
-			弊社ホームページをごらん頂きまして誠に有難う御座います。
-			弊社は１９８３年９月に設立をさせて頂き、現在に至ります。<br>
-			これもお取引先の皆様の温かいご支援と弊社の従業員がお役に立てる会社
-			を目指したお陰だと感謝しております。<br>
-			いまさらながら、IT業界の進歩には驚かされます。
-			現在は、第四時産業革命といわれIOT、AIの技術が必須となっております。<br>
-			弊社はAIには早くから取り組んでおり、これからも儀重油の向上を目指して
-			今後も躍進いたします。<br>
-			技術者の皆さんと共に社会貢献を果たし、知識産業人としての誇りを持って
-			参りたいと思います。<br><br>
+		</div>
 
 			<p id="p1">株式会社ビーアイテイが目指すことは、</p>
-			<div class="list">
+			<div class="list"><p>
 				１、全社員が一日を楽しく一年を愉快に過ごせる会社<br>
 				２、仕事を通じて、社会に貢献し存在感のある会社<br>
-				３、全社員が一生、夢と喜びが持て安心感のある会社<br><br>
+				３、全社員が一生、夢と喜びが持て安心感のある会社<br><br></p>
 			</div>
 			以上のことを今年も目指して日々努力してまいります。<br>
 			
 			社員の方々が入社してから生き生きと働ける環境を作るために、
 			私たちはこれからも、全力で魅力ある会社作りをしていきます。
-		</div>
+		
 	</div>
 </body>
 </html>
