--- a/produce.html
+++ b/produce.html
@@ -92,7 +92,7 @@
 					<div class="testFrame"></div>
 					<div class="popupModal1">
 						<input type="radio" name="modalPop" id="pop" />
-						<label for="pop">BIT 太郎</label>
+						<label for="pop">高田 秀二</label>
 						<input type="radio" name="modalPop" id="pop2" />
 						<label for="pop2">CLOSE</label>
 						<input type="radio" name="modalPop" id="pop3" />
