--- a/outline.html
+++ b/outline.html
@@ -1,9 +1,60 @@
+<!DECTYPE html>
 <html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<META http-equiv="Content-Style-Type" content="text/css">
-<link href="style_outline.css" rel="stylesheet" type="text/css">
-<title>会社概要</title>
+	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="style.css">
+		<link href="style_outline.css" rel="stylesheet" type="text/css">
+		<title>会社概要</title>
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="js/jquery.bxslider.min.js"></script>
+		<script type="text/javascript" src="jquery-1.9.1.min.js"></script>
+		<link href="css/jquery.bxslider.css" rel="stylesheet" />
+	</head>
+	<body>
+		<script type="text/javascript">
+			$(function(){
+			  $("#toggle").click(function(){
+			    $(".menu").slideToggle();
+			    return false;
+			  });
+			  $(window).resize(function(){
+			    var win = $(window).width();
+			    var p = 640;
+			    if(win > p){
+			      $(".menu").show();
+			    } else {
+			      $(".menu").hide();
+			    }
+			  });
+			});
+			$(function() {
+				var win = $(window).width();
+			    var p = 640;
+			    if(win < p)$(function(){
+					$(".menuList").click(function(){
+						$(".menu").hide();
+					});
+				});
+			});
+		</script>
+
+		<header>
+			<nav id="menu-box">
+			<div id="toggle"><a href="#" class="toggleMenu"><img src="images/rogo.png" class="toggleRogo">RECRUIT MENU</a></div>
+				<ul class="menu">
+					<li class="menuRogo"><a href="index.html"><img src="images/rogo.png" class="rogo"></a></li>
+					<li class="menuHome"><a href="index.html">ホーム</a></li>
+					<li class="menuList"><a href="#">会社概要<span class="menuLinkUnder">Company</span></a></li>
+					<li class="menuList"><a href="#">仕事内容<span class="menuLinkUnder">Work</span></a></li>
+					<li class="menuList"><a href="#">経営理念<span class="menuLinkUnder">Vision</span></a></li>
+					<li class="menuList"><a href="#">社員紹介<span class="menuLinkUnder">Produce</span></a></li>
+					<li class="menuList"><a href="#">福利厚生<span class="menuLinkUnder">Welfare</span></a></li>
+					<li class="menuList"><a href="#">募集要項<span class="menuLinkUnder">Recruit</span></a></li>
+				</ul>
+			</nav>
+		<div class="clear"></div>
+		</header>
 </head>
 <body class="overview">
 
