--- a/philosophy.html
+++ b/philosophy.html
@@ -10,21 +10,24 @@
 <body>
 	<h1>経営理念</h1>
 	<div id="container">
-	<h2>スローガン</h2>
-	<div class="text_1"><q>知識産業人として社会に貢献し、優れた創造力を持って今日を築き明日に挑む。</q></div>
-	<p id="upper_text">
-	この言葉を合言葉に"良い会社"になるために日々努力しています。<br>
-	社員全員が一日を楽しく、一年を愉快に過ごせる会社。<br>
-	社員一人一人が誇りを持てる会社を目指しています。<br>
-	楽しく愉快にとは、仕事にやりがいを感じ、誇りを持つということです。<br>
-	自分の仕事が誰かの役に立っていると実感できることが大切です。</p>
+		<h2>スローガン</h2>
+		<div class="text_1">
+			<q>知識産業人として社会に貢献し、優れた創造力を持って今日を築き明日に挑む。</q>
+		</div>
+		<p id="text_1_comment">
+			この言葉を合言葉に"良い会社"になるために日々努力しています。<br>
+			社員全員が一日を楽しく、一年を愉快に過ごせる会社。<br>
+			社員一人一人が誇りを持てる会社を目指しています。<br>
+			楽しく愉快にとは、仕事にやりがいを感じ、誇りを持つということです。<br>
+			自分の仕事が誰かの役に立っていると実感できることが大切です。
+		</p>
 	</div>
 	<div class="container1">
 		<div class="top-words">
 			<h2>社長あいさつ</h2><br>
 		</div>
-		<div id="upper_conteiner">
-			<div class="hello">
+		<div id="wrap_president">
+			<div class="president_comment">
 				弊社ホームページをごらん頂きまして誠に有難う御座います。
 				弊社は１９８３年９月に設立をさせて頂き、現在に至ります。<br>
 				これもお取引先の皆様の温かいご支援と弊社の従業員がお役に立てる会社
@@ -38,28 +41,29 @@
 			</div>
 			<div class="president">
 				<img src="images/boss.jpg" width="400" height="381" >
-				<div class="presidentTx">
+				<div class="presidentName">
 					代表取締役<br>
 					野間　一志
 				</div>
 			</div>
 		</div>
-<div class="clear">
-		</div>
+	<div class="clear"></div>
 		<div id="wrapper_list">
 			<p id="p1">株式会社ビーアイテイが目指すことは</p>
-			<div class="list"><p>
-				１、全社員が一日を楽しく一年を愉快に過ごせる会社<br>
-				２、仕事を通じて、社会に貢献し存在感のある会社<br>
-				３、全社員が一生、夢と喜びが持て安心感のある会社<br></p>
+			<div class="list">
+				<p>
+					１、全社員が一日を楽しく一年を愉快に過ごせる会社<br>
+					２、仕事を通じて、社会に貢献し存在感のある会社<br>
+					３、全社員が一生、夢と喜びが持て安心感のある会社<br>
+				</p>
 			</div>
 		</div>
-			<p id="p2">
+		<p id="p2">
 			以上のことを今年も目指して日々努力してまいります。<br>
 			
 			社員の方々が入社してから生き生きと働ける環境を作るために、
 			私たちはこれからも全力で魅力ある会社作りをしていきます。
-			</p>
+		</p>
 	</div>
 </body>
 </html>
