--- a/index.html
+++ b/index.html
@@ -88,12 +88,11 @@
 		<div class="clear"><div>
 		<footer>
 			<div class="LinkImageBox">
-				<div class="ricNaviImageBox">
-					<a href=""><img src="images/rn_logo_b.gif" class="ricNaviImage"></a>
-					<a href=""><img src="images/qr20180316101758793.png" class="LinkricNaviImageRespons"></a>
-				</div>
-				<a href=""><img src="images/facebook_link.gif" class="LinkFBImage"></a>
+				<img src="images/chibit.png" class="chibit">
+				<a href=""><img src="images/rn_logo_b.gif" class="ricNaviImage"></a>
+				<a href=""><img src="images/qr20180316101758793.png" class="LinkricNaviImageRespons"></a>
 			</div>
+			<div class="clear"><div>
 			<div class="footerMenuBox">
 				<ul class="footerMenu">
 					<li class="footerMenu"><a href="" class="footerMenuLink">会社概要<a/></li>
