--- a/philosophy.html
+++ b/philosophy.html
@@ -8,7 +8,7 @@
 <title>経営理念</title>
 </head>
 <body>
-	<h1>あかさたな経営理念</h1>
+	<h1>経営理念</h1>
 	<div id="container">
 		<h2>スローガン</h2>
 		<div class="text_1">
