テスト修正

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<div id="toggle"><a href="#" class="toggleMenu"><img src="images/rogo.png" class="toggleRogo">RECRUIT MENU</a></div>
 				<ul class="menu">
 					<li class="menuRogo"><a href="index.html"><img src="images/rogo.png" class="rogo"></a></li>
-					<li class="menuHome"><a href="index.html">ホーム</a></li>
+					<li class="menuHome"><a href="index.html">ホーム!</a></li>
 					<li class="menuList"><a href="#">会社概要<span class="menuLinkUnder">Company</span></a></li>
 					<li class="menuList"><a href="#">仕事内容<span class="menuLinkUnder">Work</span></a></li>
 					<li class="menuList"><a href="#">経営理念<span class="menuLinkUnder">Vision</span></a></li>
