05/17 拝師追加分

--- a/working.html
+++ b/working.html
@@ -9,18 +9,16 @@
 <body class="overview">
 	<h1 align="center">仕事内容</h1>
 	<br>
-	<div class="title">
-		<img src="images/title1.png" alt="携わるお客様全てに満足を" class="title">
-	</div>
+	<h2 align="left">携わるお客様全てに満足を</h2>
 	<br>
 	<div class="text">
 		私たちがご提供するサービスはシステム開発ではありません。<br>
 	</div>
 	<br>
 	<br>
-	<div class="description1">
-		<img src="images/sample.jpg" alt="説明図" class="description1">
-	</div>
+	<div class="image1">
+		<img src="images/sample.jpg" alt="サンプル" class="image1">
+	
 	<br>
 	<br>
 	<div class="text">
@@ -33,15 +31,49 @@
 	<br>
 	<br>
 	<br>
-	<div class="title">
-		<img src="images/title1.png" alt="携わるお客様全てに満足を" class="title1">
+	<h2 align="left">入社から研修を経て...</h2>
+	<br>
+	<br>
+	<div class="image2">
+		<img src="images/sample.jpg" alt="サンプル" class="image2">
+	</div>
+	<div class="image3">
+		<img src="images/sample.jpg" alt="サンプル" class="image3">
+	</div>
+	<div class="image4">
+		<img src="images/sample.jpg" alt="サンプル" class="image4">
+	</div>
+	<div class="image5">
+		<img src="images/sample.jpg" alt="サンプル" class="image5">
 	</div>
 	<br>
 	<br>
-	<div class="description1">
-		<img src="images/sample.jpg" alt="説明図" class="description1">
+	<div class="text">
+		基本的には、自社独自の研修プログラムを基に学習を進めていきます。<br>
+		<br>
+		たとえ何かわからないことがあっても大丈夫！<br>
+		<br>
+		頼れる先輩方がきっちりフォローしてくれます。
 	</div>
 	<br>
 	<br>
+	<div class="image6">
+		<img src="images/sample.jpg" alt="サンプル" class="image6">
+	</div>
+	<div class="image7">
+		<img src="images/sample.jpg" alt="サンプル" class="image7">
+	</div>
+	<div class="image8">
+		<img src="images/sample.jpg" alt="サンプル" class="image8">
+	</div>
+	<br>
+	<br>
+	<div class="text">
+		お客様の業種や使用するプログラミング言語は様々なので、<br>
+		<br>
+		ご依頼・ご要望の内容は多岐にわたります。<br>
+		<br>
+		○○
+	</div>
 </body>
 </html>
