--- a/produce.html
+++ b/produce.html
@@ -99,9 +99,67 @@
 						<label for="pop3">×</label>
 						<div class="modalPopup2">
 							<div class="modalPopup3">
-								<h3 class="modalTitle">社員名とか部署名とか</h3>
+								<h3 class="modalTitle">社員紹介</h3>
 								<div class="modalMain">
 								<div class="testFrame"></div>
+									・学生時代に学んだこと<br>
+									旅行専門学校で資格取得を目指し<br>
+									観光業務やホテル業務のイロハを学んでおりました。<br>
+									残念ながら在学中資格の取得は出来ませんでしたが．．．。<br><br>
+
+									・BITを選んだ理由<br>
+									旅行会社への就職を目指し就活開始<br>
+									１９９０年代初旬に突然バブルが崩壊<br>
+									旅行会社の求人が激減し挫折<br>
+									路頭に迷っているさなか求人媒体ではＳＥ・ＰＧの募集が<br>
+									あふれていました。<br>
+									そこでとりあえず何の知識を無く某システム会社へ応募<br>
+									なぜか採用ＩＴ業界に足をふみいれ約３年ほど勤務<br>
+									自分自身のスキルアップを目指し新たに活躍できる場所を<br>
+									求め転職活動を開始しＢＩＴへ応募<br><br>
+
+									当時は設立１０年目ほどで少人数のＢＩＴでしたがビジョンがあり<br>
+									また若手社員が活躍し活力や将来性を感じ、なぜか心をひかれこの会社を選びました。<br><br>
+
+									・これから働くにあたって、身につけたいこと又は、身につけておけばよかったこと<br>
+									【身につけたい事】<br>
+									経営哲学や会社運営に携わる全ての事<br><br>
+
+									【身につけておけばよかった事】<br>
+									なんだろ？<br>
+									色々と有ったのかなと思います。<br>
+									が、これからでも遅くないので色々と見につけていきます<br>
+
+									・やりがいを感じる瞬間<br>
+									不景気時に仕事が受注できた時<br>
+									お客様に助けられた時<br>
+									新たな仕事が受注できた時<br>
+									沢山の仲間と出会えた事<br>
+									ｅｔｃ．<br><br>
+
+									・今後の目標<br>
+									事業拡大<br>
+									システム開発業務以外にＩＴを活用した新たな事業を起こす<br>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- 社員紹介枠 -->
+				<div class="center">
+					<!-- <img src="" class="testFrame"> -->
+					<div class="testFrame"></div>
+					<div class="popupModal1">
+						<input type="radio" name="modalPop" id="pop" />
+						<label for="pop">吉田 亮</label>
+						<input type="radio" name="modalPop" id="pop2" />
+						<label for="pop2">CLOSE</label>
+						<input type="radio" name="modalPop" id="pop3" />
+						<label for="pop3">×</label>
+						<div class="modalPopup2">
+							<div class="modalPopup3">
+								<h3 class="modalTitle">吉田 亮</h3>
+								<div class="modalMain">
 									・学生時代に学んだこと<br>
 									大学時代は完全に文系である「ヒト・モノ・カネ」の流れについて学び、<br>
 									情報処理系の授業を選択したことがきっかけで、独学で資格取得やHP作成などを<br>
@@ -110,20 +168,19 @@
 									き続けたことにより<br>
 									余裕を持った事前準備、スピーディーな状況判断、チームワークの大切さなどを<br>
 									学びました。<br><br>
-									
+
 									・BITを選んだ理由<br>
 									入社当時は創業２０周年を迎えていましたが、その古さを感じさせない「若手、<br>
-									中堅社員が活躍できる」<br>
-									社風を感じ取れたからです。<br><br>
+									中堅社員が活躍できる」社風を感じ取れたからです。<br><br>
 
 									・これから働くにあたって、身につけたいこと又は、身につけておけばよかったこと<br>
-									何にでも興味を持つことが大事かと思います。興味があれば行動しますし、身にもつきます。<br>
-									大事なことは様々なことを経験していることだと思います。<br><br>
+									何にでも興味を持つことが大事かと思います。興味があれば行動しますし、身にもつきます。
+									大事なことは様々なことを経験していることだと思います。
 
 									・やりがいを感じる瞬間<br>
-									やはり楽しさは「ものづくり」にあると思います。<br>
-									自分で設計、プログラミングしたものが画面上で正しく表示されたり動作したりすると<br>
-									「よし！」と思いますし、お客さまに喜んでいただくことも当然嬉しいです。<br>
+									やはり楽しさは「ものづくり」にあると思います。自分で設計、プログラミング<br>
+									したものが画面上で正しく表示されたり<br>
+									動作したりすると「よし！」と思いますし、お客さまに喜んでいただくことも当然嬉しいです。<br>
 									理系の人が強いイメージでしたが、上記の通り文系出身の自分の特色が生きる場面も多いので、<br>
 									そこにやりがいを感じて今後も楽しく仕事したいと思っています。<br><br>
 
@@ -133,19 +190,20 @@
 									また、社員がやりたい仕事に就け、お客さまの満足度も上がるようなフォローを行うことです。<br><br>
 
 									・簡単な今の仕事内容と、一日の流れ<br>
-									作業内容としては、プログラミングから要件定義支援までを行っており、<br>
-									その時々に必要な作業を能動的に行っています。<br>
-									一日の流れは、<br>
-									「６時半に起床→娘を小学校へ送り出す→電車で常駐先へ→業務開始→<br>
-									業務終了→社長と食事(※毎日ではない)→帰宅→娘と息子を風呂からあげる→<br>
-									娘に本を読んで寝かしつける→自分の時間（読書、TV鑑賞など）」<br>
-									といった感じでしょうか。<br><br>
+									作業内容としては、プログラミングから要件定義支援までを行っており、その時々に必要な作業を<br>
+									能動的に行っています。<br>
+									一日の流れは、「６時半に起床→娘を小学校へ送り出す→電車で常駐先へ→<br>
+									業務開始→業務終了→社長と食事(※毎日ではない)→帰宅→娘と息子を風呂からあげる<br>
+									→娘に本を読んで寝かしつける→自分の時間（読書、TV鑑賞など）」といった感じでしょうか。<br><br>
 
 									・メッセージ（なにか一言）<br>
 									業界、業種、会社選びは難しく、よく分からないかもしれません。<br>
-									BITという会社は、入社後の新人教育もしっかり行っており（とは言え自主的な学習は必須ですが）<br>
-									ほぼ毎年新入社員を雇用してしていますので、相談したり何気ない会話のできる先輩が見つかるはずです。<br>
-									まずは気軽に面接を受けて、会社の場所、雰囲気、人などを見て感じて判断してもらえればと思います。<br>
+									BITという会社は、入社後の新人教育もしっかり行っており<br>
+									（とは言え自主的な学習は必須ですが）<br>
+									ほぼ毎年新入社員を雇用してしていますので、相談したり何気ない会話のできる<br>
+									先輩が見つかるはずです。<br>
+									まずは気軽に面接を受けて、会社の場所、雰囲気、人などを見て感じて判断して<br>
+									もらえればと思います。<br>
 								</div>
 							</div>
 						</div>
@@ -157,41 +215,36 @@
 					<div class="testFrame"></div>
 					<div class="popupModal1">
 						<input type="radio" name="modalPop" id="pop" />
-						<label for="pop">BIT 太郎</label>
+						<label for="pop">山内 明</label>
 						<input type="radio" name="modalPop" id="pop2" />
 						<label for="pop2">CLOSE</label>
 						<input type="radio" name="modalPop" id="pop3" />
 						<label for="pop3">×</label>
 						<div class="modalPopup2">
 							<div class="modalPopup3">
-								<h3 class="modalTitle">社員名</h3>
+								<h3 class="modalTitle">山内 明</h3>
 								<div class="modalMain">
-									<p>世界中どこを探してもなかったので作りました。</p>
-									<p>jsを使っていないのでコンフリクトすることはありません。</p>
-									<p>スマホにも対応。iPhone4くらいの小さい画面でも大丈夫です。</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- 社員紹介枠 -->
-				<div class="center">
-					<!-- <img src="" class="testFrame"> -->
-					<div class="testFrame"></div>
-					<div class="popupModal1">
-						<input type="radio" name="modalPop" id="pop" />
-						<label for="pop">BIT 太郎</label>
-						<input type="radio" name="modalPop" id="pop2" />
-						<label for="pop2">CLOSE</label>
-						<input type="radio" name="modalPop" id="pop3" />
-						<label for="pop3">×</label>
-						<div class="modalPopup2">
-							<div class="modalPopup3">
-								<h3 class="modalTitle">社員名</h3>
-								<div class="modalMain">
-									<p>世界中どこを探してもなかったので作りました。</p>
-									<p>jsを使っていないのでコンフリクトすることはありません。</p>
-									<p>スマホにも対応。iPhone4くらいの小さい画面でも大丈夫です。</p>
+									・学生時代に学んだこと<br>
+									特にないです（忘れた）。<br>
+									ただ読書好きだったので、語彙・読解力は鍛えれたと思います。<br><br>
+
+									・BITを選んだ理由<br>
+									自分の可能性を試せる会社だと思ったからです。<br><br>
+
+									・これから働くにあたって、身につけたいこと又は、身につけておけばよかったこと<br>
+									人への物の教え方。<br><br>
+
+									・やりがいを感じる瞬間<br>
+									段取り通り物事が進んでいる時。<br><br>
+
+									・今後の目標<br>
+									老後を生き抜く（死ぬまで技術者）。<br><br>
+
+									・簡単な今の仕事内容と、一日の流れ<br>
+									複雑なので割愛させていただきます。<br><br>
+
+									・メッセージ（なにか一言）<br>
+									死ぬまで活きよ（座右の銘）<br>
 								</div>
 							</div>
 						</div>
@@ -204,7 +257,7 @@
 					<div class="testFrame"></div>
 					<div class="popupModal1">
 						<input type="radio" name="modalPop" id="pop" />
-						<label for="pop">BIT 太郎</label>
+						<label for="pop">社員名</label>
 						<input type="radio" name="modalPop" id="pop2" />
 						<label for="pop2">CLOSE</label>
 						<input type="radio" name="modalPop" id="pop3" />
