--- a/outline.html
+++ b/outline.html
@@ -58,131 +58,152 @@
 </head>
 <body class="overview">
 	<h1 align="center">会社概要</h1>
-	<dl>
-		<dt class="index">
-			会社名
-		</dt>
-		<dd class="contents">
-			株式会社ビーアイテイ(略称 BIT)
-		</dd>
-		<dt class="index">
-			設立
-		</dt>
-		<dd class="contents">
-			1983年9月16日
-		</dd>
-		<dt class="index">
-			役員
-		</dt>
-		<dd class="contents">
-			代表取締役　野間　一志<br>
-			専務取締役　西川　寿一<br>
-			取締役　山内　明<br>
-			取締役　羽岡　義明<br>
-			<br>
-			執行役員　高田　秀二<br>
-			執行役員　鈴木　淳也<br>
-			執行役員　柳本　隆春<br>
-			執行役員　大黒　良司
-		</dd>
-		<dt class="index">
-			資本金
-		</dt>
-		<dd class="contents">
-			3,000万円
-		</dd>
-		<dt class="index">
-			社員数
-		</dt>
-		<dd class="contents">
-			53名（平均年齢38歳【H29.07.01現在】）
-		</dd>
-		<dt class="index">
-			取引銀行
-		</dt>
-		<dd class="contents">
-			三井住友銀行　大阪本店営業部<br>
-			みずほ銀行　大阪支店
-		</dd>
-		<dt class="index">
-			許認可
-		</dt>
-		<dd class="contents">
-			労働者派遣事業者　派27-302566（2017年6月1日）<br>
-			プライバシーマーク　20001691号（2012年3月13日）
-		</dd>
-		<dt class="index">
-			業務内容
-		</dt>
-		<dd class="contents">
-			<ul style="padding-left:3em">
-				<li>ITコンサルティング</li>
-				<li>業務系ソフトウェア開発</li>
-				<li>Webコンテンツ作成、Webアプリケーション開発</li>
-				<li>パッケージソフトウェア開発・販売</li>
-				<li>各種サーバー構築・保守</li>
-			</ul>
-		</dd>
-		<dt class="index">
-			加入団体
-		</dt>
-		<dd class="contents">
-			大阪商工会議所
-			日本Linux協会
-		</dd>
-		<dt class="index">
-			認定パートナー
-		</dt>
-		<dd class="contents">
-			<div class="partner">
-				マイクロソフト 認定パートナー(Silver Datacenter)
+	<table>
+		<tr class="wrap_cell">
+			<th class="index">
+				会社名
+			</th>
+			<td class="contents">
+				株式会社ビーアイテイ(略称 BIT)
+			</td>
+		</tr>
+		<tr class="wrap_cell">
+			<th class="index">
+				設立
+			</th>
+			<td class="contents">
+				1983年9月16日
+			</td>
+		</tr>
+		<tr class="wrap_cell">
+			<th class="index">
+				役員
+			</th>
+			<td class="contents">
+				代表取締役　野間　一志<br>
+				専務取締役　西川　寿一<br>
+				取締役　山内　明<br>
+				取締役　羽岡　義明<br>
 				<br>
-				<img src="img/MPN_logo.png" hspace="20">
+				執行役員　高田　秀二<br>
+				執行役員　鈴木　淳也<br>
+				執行役員　柳本　隆春<br>
+				執行役員　大黒　良司
+			</td>
+		</tr>
+		<tr class="wrap_cell">
+			<th class="index">
+				資本金
+			</th>
+			<td class="contents">
+				3,000万円
+			</td>
+		</tr>
+		<tr class="wrap_cell">
+			<th class="index">
+				社員数
+			</th>
+			<td class="contents">
+				53名（平均年齢38歳【H29.07.01現在】）
+			</td>
+		</tr>
+		<tr class="wrap_cell">
+			<th class="index">
+				取引銀行
+			</th>
+			<td class="contents">
+				三井住友銀行　大阪本店営業部<br>
+				みずほ銀行　大阪支店
+			</td>
+		</tr>
+		<tr class="wrap_cell">
+			<th class="index">
+				許認可
+			</th>
+			<td class="contents">
+				労働者派遣事業者　派27-302566（2017年6月1日）<br>
+				プライバシーマーク　20001691号（2012年3月13日）
+			</td>
+		</tr>
+		<tr class="wrap_cell">
+			<th class="index">
+				業務内容
+			</th>
+			<td class="contents">
+				<ul style="patding-left:3em">
+					<li>ITコンサルティング</li>
+					<li>業務系ソフトウェア開発</li>
+					<li>Webコンテンツ作成、Webアプリケーション開発</li>
+					<li>パッケージソフトウェア開発・販売</li>
+					<li>各種サーバー構築・保守</li>
+				</ul>
+			</td>
+		</tr>
+		<tr class="wrap_cell">
+			<th class="index">
+				加入団体
+			</th>
+			<td class="contents">
+				大阪商工会議所
+				日本Linux協会
+			</td>
+		</tr>
+		<tr class="wrap_cell">
+			<th class="index">
+				認定パートナー
+			</th>
+			<td class="contents">
+				<div class="partner">
+					マイクロソフト 認定パートナー(Silver Datacenter)
+					<br>
+					<img src="img/MPN_logo.png" hspace="20">
+				</div>
+				<div class="partner">
+					オラクル(OPN Silver Partner) 
+					<br>
+					<img src="img/opn_mp.gif" hspace="20">
+				</div>
+				<div class="partner">
+					シマンテック（Symantec Silver Partner)
+					<br>
+					<img src="img/icon_sales.gif" hspace="20">
+				</div>
+			</td>
+		</tr>
+		<tr class="wrap_cell">
+			<th class="index">
+				大阪本社
+			</th>
+			<td class="contents">
+				<div class="companyinfo">
+					〒550-0002<br>
+					大阪市西区江戸堀1-10-2(肥後橋ニッタイビル5F)<br>
+					TEL：06-6445-7480<br>
+					FAX：06-6445-7239<br>
+				</div>
+				<div class="google-box">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5679.162899329557!2d135.4936039889313!3d34.68706335155884!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e6fab81e199d%3A0x5f4f4f9f1b1f4759!2z44CSNTUwLTAwMDIg5aSn6Ziq5bqc5aSn6Ziq5biC6KW_5Yy65rGf5oi45aCA77yR5LiB55uu77yR77yQ4oiS77yS!5e0!3m2!1sja!2sjp!4v1522312932591" frameborder="0" style="border: 0;  width: 100%; height: 100%;" allowfullscreen></iframe>
+				</div>
+			</td>
+		</tr>
+			<div class="clear">
 			</div>
-			<div class="partner">
-				オラクル(OPN Silver Partner) 
-				<br>
-				<img src="img/opn_mp.gif" hspace="20">
-			</div>
-			<div class="partner">
-				シマンテック（Symantec Silver Partner)
-				<br>
-				<img src="img/icon_sales.gif" hspace="20">
-			</div>
-		</dd>
-		<dt class="index">
-			大阪本社
-		</dt>
-		<dd class="contents">
-			<div class="companyinfo">
-				〒550-0002<br>
-				大阪市西区江戸堀1-10-2(肥後橋ニッタイビル5F)<br>
-				TEL：06-6445-7480<br>
-				FAX：06-6445-7239<br>
-			</div>
-			<div class="google-box">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5679.162899329557!2d135.4936039889313!3d34.68706335155884!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e6fab81e199d%3A0x5f4f4f9f1b1f4759!2z44CSNTUwLTAwMDIg5aSn6Ziq5bqc5aSn6Ziq5biC6KW_5Yy65rGf5oi45aCA77yR5LiB55uu77yR77yQ4oiS77yS!5e0!3m2!1sja!2sjp!4v1522312932591" frameborder="0" style="border: 0;  width: 100%; height: 100%;" allowfullscreen></iframe>
-			</div>
-		</dd>
-		<dt class="clear">
-		</dt>
-		<dt class="index">
-			東京オフィス
-		</dt>
-		<dd class="contents">
-			<span class="companyinfo">
-				〒101-0032<br>
-				東京都千代田区岩本町2-12-2 第2早川ビル9階<br>
-				TEL：03-6240-9120<br>
-				FAX：03-6240-9121<br>
-			</span>
-			<span class="google-box">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6480.617671528825!2d139.776435!3d35.69401700000001!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188eabc2ba8ac1%3A0x8cbe6ddcf855af59!2z5pel5pys44CB44CSMTAxLTAwMzIg5p2x5Lqs6YO95Y2D5Luj55Sw5Yy65bKp5pys55S677yS5LiB55uu77yR77yS4oiS77yS!5e0!3m2!1sja!2sus!4v1522317496916" frameborder="0" style="border: 0; width: 100%; height: 100%;" allowfullscreen></iframe>
-			</span>
-		</dd>
-	</dl>
-	<div class="clear">
-	</div>
-
+		<tr class="wrap_cell">
+			<th class="index">
+				東京オフィス
+			</th>
+			<td class="contents">
+				<span class="companyinfo">
+					〒101-0032<br>
+					東京都千代田区岩本町2-12-2 第2早川ビル9階<br>
+					TEL：03-6240-9120<br>
+					FAX：03-6240-9121<br>
+				</span>
+				<span class="google-box">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6480.617671528825!2d139.776435!3d35.69401700000001!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188eabc2ba8ac1%3A0x8cbe6tdcf855af59!2z5pel5pys44CB44CSMTAxLTAwMzIg5p2x5Lqs6YO95Y2D5Luj55Sw5Yy65bKp5pys55S677yS5LiB55uu77yR77yS4oiS77yS!5e0!3m2!1sja!2sus!4v1522317496916" frameborder="0" style="border: 0; width: 100%; height: 100%;" allowfullscreen></iframe>
+				</span>
+			</td>
+		</tr>
+	</table>
 </body>
 </html>
