--- a/working.html
+++ b/working.html
@@ -9,15 +9,17 @@
 <body class="overview">
 	<h1 align="center">仕事内容</h1>
 	<br>
-	<h2 align="left">携わるお客様全てに満足を</h2>
+	<div class="image1">
+		<img src="images/working1.png" alt="携わるお客様全てに満足を" class="image1">
+	</div>
 	<br>
 	<div class="text">
 		私たちがご提供するサービスはシステム開発ではありません。<br>
 	</div>
 	<br>
 	<br>
-	<div class="image1">
-		<img src="images/sample.jpg" alt="サンプル" class="image1">
+	<div class="image2">
+		<img src="images/sample.jpg" alt="サンプル" class="image2">
 	
 	<br>
 	<br>
@@ -31,20 +33,22 @@
 	<br>
 	<br>
 	<br>
-	<h2 align="left">入社から研修を経て...</h2>
-	<br>
-	<br>
-	<div class="image2">
-		<img src="images/sample.jpg" alt="サンプル" class="image2">
-	</div>
 	<div class="image3">
-		<img src="images/sample.jpg" alt="サンプル" class="image3">
+		<img src="images/working2.png" alt="入社から研修を経て..." class="image3">
 	</div>
+	<br>
+	<br>
 	<div class="image4">
 		<img src="images/sample.jpg" alt="サンプル" class="image4">
 	</div>
 	<div class="image5">
 		<img src="images/sample.jpg" alt="サンプル" class="image5">
+	</div>
+	<div class="image6">
+		<img src="images/sample.jpg" alt="サンプル" class="image6">
+	</div>
+	<div class="image7">
+		<img src="images/sample.jpg" alt="サンプル" class="image7">
 	</div>
 	<br>
 	<br>
@@ -57,14 +61,14 @@
 	</div>
 	<br>
 	<br>
-	<div class="image6">
-		<img src="images/sample.jpg" alt="サンプル" class="image6">
-	</div>
-	<div class="image7">
-		<img src="images/sample.jpg" alt="サンプル" class="image7">
-	</div>
 	<div class="image8">
 		<img src="images/sample.jpg" alt="サンプル" class="image8">
+	</div>
+	<div class="image9">
+		<img src="images/sample.jpg" alt="サンプル" class="image9">
+	</div>
+	<div class="image10">
+		<img src="images/sample.jpg" alt="サンプル" class="image10">
 	</div>
 	<br>
 	<br>
