募集要項のボタンを右に寄せる対応

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 				<ul class="menu">
 					<li class="menuRogo"><a href="index.html"><img src="images/rogo.png" class="rogo"></a></li>
 					<li class="menuHome"><a href="index.html">ホーム</a></li>
-					<li class="menuList"><a href="#">会社概要<span class="menuLinkUnder">Company</span></a></li>
-					<li class="menuList"><a href="#">仕事内容<span class="menuLinkUnder">Work</span></a></li>
-					<li class="menuList"><a href="#">経営理念<span class="menuLinkUnder">Vision</span></a></li>
-					<li class="menuList"><a href="#">社員紹介<span class="menuLinkUnder">Produce</span></a></li>
-					<li class="menuList"><a href="#">福利厚生<span class="menuLinkUnder">Welfare</span></a></li>
-					<li class="menuList"><a href="#">募集要項<span class="menuLinkUnder">Recruit</span></a></li>
+					<li class="menuList"><a href="outline.html">会社概要<span class="menuLinkUnder">Company</span></a></li>
+					<li class="menuList"><a href="working.html">仕事内容<span class="menuLinkUnder">Work</span></a></li>
+					<li class="menuList"><a href="philosophy.html">経営理念<span class="menuLinkUnder">Vision</span></a></li>
+					<li class="menuList"><a href="produce.html">社員紹介<span class="menuLinkUnder">Produce</span></a></li>
+					<li class="menuList"><a href="walfare.html">福利厚生<span class="menuLinkUnder">Welfare</span></a></li>
+					<li class="menuList"><a href="recruit.html">募集要項<span class="menuLinkUnder">Recruit</span></a></li>
 				</ul>
 			</nav>
 		<div class="clear"></div>
@@ -88,19 +88,22 @@
 		<div class="clear"><div>
 		<footer>
 			<div class="LinkImageBox">
-				<img src="images/chibit.png" class="chibit">
-				<a href=""><img src="images/rn_logo_b.gif" class="ricNaviImage"></a>
-				<a href=""><img src="images/qr20180316101758793.png" class="LinkricNaviImageRespons"></a>
+				<div class="ricNaviImageBox">
+					<a href=""><img src="images/rn_logo_b.gif" class="ricNaviImage"></a>
+					<a href=""><img src="images/qr20180316101758793.png" class="LinkricNaviImageRespons"></a>
+				</div>
+				<a href=""><img src="images/facebook_link.gif" class="LinkFBImage"></a>
 			</div>
-			<div class="clear"><div>
 			<div class="footerMenuBox">
 				<ul class="footerMenu">
-					<li class="footerMenu"><a href="" class="footerMenuLink">会社概要<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">仕事内容<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">経営理念<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">社員紹介<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">福利厚生<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">募集要項<a/></li>
+					<li class="footerMenu"><a href="index.html" class="footerMenuLink">会社概要<a/></li>
+					<li class="footerMenu"><a href="index.html" class="footerMenuLink">仕事内容<a/></li>
+					<li class="footerMenu"><a href="outline.html" class="footerMenuLink">経営理念<a/></li>
+					<li class="footerMenu"><a href="working.html" class="footerMenuLink">社員紹介<a/></li>
+					<li class="footerMenu"><a href="philosophy.html" class="footerMenuLink">福利厚生<a/></li>
+					<li class="footerMenu"><a href="produce.html" class="footerMenuLink">募集要項<a/></li>
+					<li class="footerMenu"><a href="walfare.html" class="footerMenuLink"><img src="./images/fb.png"><a/></li>
+					<li class="footerMenu"><a href="recruit.html" class="footerMenuLink"><img src="./images/ab.png"><a/></li>
 				</ul>
 			</div>
 			<div class="clear"><div>
