ソースいじりました

--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
 					<li class="footerMenu"><a href="" class="footerMenuLink">社員紹介<a/></li>
 					<li class="footerMenu"><a href="" class="footerMenuLink">福利厚生<a/></li>
 					<li class="footerMenu"><a href="" class="footerMenuLink">募集要項<a/></li>
+					<li class="footerMenu"><a href="" class="footerMenuLink"><img src="./images/fb.png"><a/></li>
+					<li class="footerMenu"><a href="" class="footerMenuLink"><img src="./images/ab.png"><a/></li>
 				</ul>
 			</div>
 			<div class="clear"><div>
