--- a/produce.html
+++ b/produce.html
@@ -67,7 +67,7 @@
 		
 <!-- 画像 -->
 <div class="image">
-	<img src="./images/image01.png" alt="社員紹介">
+	<img src="./images/title04.png" alt="社員紹介">
 </div>
 <!-- //画像 -->
 
