--- a/working.html
+++ b/working.html
@@ -7,7 +7,9 @@
 	<title>(仮)仕事内容</title>
 </head>
 <body class="overview">
-	<h1 align="center">仕事内容</h1>
+	<div class="title02">
+		<img src="images/title02.png" alt="仕事内容" class="title02">
+	</div>
 	<br>
 	<div class="image1">
 		<img src="images/working1.png" alt="携わるお客様全てに満足を" class="image1">
