経営理念css名前変更

--- a/philosophy.html
+++ b/philosophy.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 	<h1>経営理念</h1>
-	<div id="container">
+	<div class="slogan_container">
 		<h2>スローガン</h2>
-		<div class="text_1">
+		<div class="slogan_headderText">
 			<q>知識産業人として社会に貢献し、優れた創造力を持って今日を築き明日に挑む。</q>
 		</div>
-		<p id="text_1_comment">
+		<p class="slogan_mainText">
 			この言葉を合言葉に"良い会社"になるために日々努力しています。<br>
 			社員全員が一日を楽しく、一年を愉快に過ごせる会社。<br>
 			社員一人一人が誇りを持てる会社を目指しています。<br>
@@ -22,12 +22,12 @@
 			自分の仕事が誰かの役に立っていると実感できることが大切です。
 		</p>
 	</div>
-	<div class="container1">
-		<div class="top-words">
+	<div class="greeting_wrapper">
+		<div class="wrap_greetingTitle">
 			<h2>社長あいさつ</h2><br>
 		</div>
-		<div id="wrap_president">
-			<div class="president_comment">
+		<div class="wrap_upper_president">
+			<div class="upper_presidentComment">
 				弊社ホームページをごらん頂きまして誠に有難う御座います。
 				弊社は１９８３年９月に設立をさせて頂き、現在に至ります。<br>
 				これもお取引先の皆様の温かいご支援と弊社の従業員がお役に立てる会社
@@ -39,7 +39,7 @@
 				技術者の皆さんと共に社会貢献を果たし、知識産業人としての誇りを持って
 				参りたいと思います。<br><br>
 			</div>
-			<div class="president">
+			<div class="presidentImg">
 				<img src="images/boss.jpg" width="400" height="381" >
 				<div class="presidentName">
 					代表取締役<br>
@@ -48,17 +48,17 @@
 			</div>
 		</div>
 	<div class="clear"></div>
-		<div id="wrapper_list">
-			<p id="p1">株式会社ビーアイテイが目指すことは</p>
+		<div class="wrapper_list">
+			<p class="list_headderWord">株式会社ビーアイテイが目指すことは</p>
 			<div class="list">
-				<p id="p2">
+				<p class="list_text">
 					１、全社員が一日を楽しく一年を愉快に過ごせる会社<br>
 					２、仕事を通じて、社会に貢献し存在感のある会社<br>
 					３、全社員が一生、夢と喜びが持て安心感のある会社<br>
 				</p>
 			</div>
 		</div>
-		<p id="p3">
+		<p class="bottom_presidentComment">
 			以上のことを今年も目指して日々努力してまいります。<br>
 			社員の方々が入社してから生き生きと働ける環境を作るために、
 			私たちはこれからも全力で魅力ある会社作りをしていきます。
