--- a/produce.html
+++ b/produce.html
@@ -1,6 +1,9 @@
 <!DECTYPE html>
 <html>
 	<head>
+<?php
+	include_once("../inc/config.inc");
+?>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="style.css">
 		<title>(仮)BITリクルートサイト</title>
@@ -48,22 +51,9 @@
 				});
 			});
 		</script>
-		<header>
-			<nav id="menu-box">
-			<div id="toggle"><img src="images/rogo.png" class="toggleRogo"><a href="#" class="toggleMenu">RECRUIT MENU</a></div>
-				<ul class="menu">
-					<li class="menuRogo"><a href="index.html"><img src="images/rogo.png" class="rogo"></a></li>
-					<li class="menuHome"><a href="index.html">ホーム</a></li>
-					<li class="menuList"><a href="#">会社概要<span class="menuLinkUnder">Company</span></a></li>
-					<li class="menuList"><a href="#">仕事内容<span class="menuLinkUnder">Work</span></a></li>
-					<li class="menuList"><a href="#">経営理念<span class="menuLinkUnder">Vision</span></a></li>
-					<li class="menuList"><a href="#">社員紹介<span class="menuLinkUnder">Produce</span></a></li>
-					<li class="menuList"><a href="#">福利厚生<span class="menuLinkUnder">Welfare</span></a></li>
-					<li class="menuList"><a href="#">募集要項<span class="menuLinkUnder">Recruit</span></a></li>
-				</ul>
-			</nav>
-		<div class="clear"></div>
-		</header>
+<?php
+	include("../inc/header.inc");
+?>
 		
 <!-- 画像 -->
 <div class="image">
@@ -126,30 +116,9 @@
 
 		
 		<div class="clear"></div>
-		<footer>
-			<hr>
-			<div class="LinkImageBox">
-				<div class="ricNaviImageBox">
-					<a href=""><img src="images/rn_logo_b.gif" class="ricNaviImage"></a>
-					<a href=""><img src="images/qr20180316101758793.png" class="LinkricNaviImageRespons"></a>
-				</div>
-				<a href=""><img src="images/facebook_link.gif" class="LinkFBImage"></a>
-			</div>
-			<div class="footerMenuBox">
-				<ul class="footerMenu">
-					<li class="footerMenu"><a href="" class="footerMenuLink">会社概要<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">仕事内容<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">経営理念<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">社員紹介<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">福利厚生<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">募集要項<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink"><img src="./images/fb.png"><a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink"><img src="./images/ab.png"><a/></li>
-				</ul>
-			</div>
-			<div class="clear"><div>
-			<p class="copyright">Copyright ©2018 BIT Ltd. All Rights Reserved.</p>
-		</footer>
+<?php
+	include("../inc/footer.inc");
+?>
 </div>
 	</body>
 </html>
