経営理念各画像配置

--- a/philosophy.html
+++ b/philosophy.html
@@ -8,9 +8,9 @@
 <title>経営理念</title>
 </head>
 <body>
-	<h1>経営理念</h1>
+	<div class="topImg"><img src="images/title03.png"></div>
 	<div class="slogan_container">
-		<h2>スローガン</h2>
+		<div class="topImg"><img src="images/philosophy_sub1.png"></div>
 		<div class="slogan_headderText">
 			<q>知識産業人として社会に貢献し、優れた創造力を持って今日を築き明日に挑む。</q>
 		</div>
@@ -24,7 +24,7 @@
 	</div>
 	<div class="greeting_wrapper">
 		<div class="wrap_greetingTitle">
-			<h2>社長あいさつ</h2><br>
+			<div class="topImg"><img src="images/philosophy_sub2.png"></div>
 		</div>
 		<div class="wrap_upper_president">
 			<div class="upper_presidentComment">
